// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerContent renders default props 1`] = `
<div>
  <div
    className="toolbar"
  />
  <WithStyles(Divider) />
  <WithStyles(List) />
  <WithStyles(Divider) />
  <WithStyles(ListItem)
    className="darkMode"
  >
    <WithStyles(Switch)
      checked={false}
      color="primary"
      onChange={[Function]}
    />
    <WithStyles(ListItemText)
      primary="Dark Mode"
    />
  </WithStyles(ListItem)>
  <WithStyles(Divider) />
  <div
    className="social"
  >
    <a
      aria-label="Follow @chrisdopuch on GitHub"
      className="github-button"
      href="https://github.com/chrisdopuch"
    >
      Follow @chrisdopuch
    </a>
  </div>
</div>
`;

exports[`DrawerContent renders with \`isDarkMode\` true 1`] = `
<div>
  <div
    className="toolbar"
  />
  <WithStyles(Divider) />
  <WithStyles(List) />
  <WithStyles(Divider) />
  <WithStyles(ListItem)
    className="darkMode"
  >
    <WithStyles(Switch)
      checked={true}
      color="primary"
      onChange={[Function]}
    />
    <WithStyles(ListItemText)
      primary="Dark Mode"
    />
  </WithStyles(ListItem)>
  <WithStyles(Divider) />
  <div
    className="social"
  >
    <a
      aria-label="Follow @chrisdopuch on GitHub"
      className="github-button"
      href="https://github.com/chrisdopuch"
    >
      Follow @chrisdopuch
    </a>
  </div>
</div>
`;

exports[`DrawerContent renders with items 1`] = `
<div>
  <div
    className="toolbar"
  />
  <WithStyles(Divider) />
  <WithStyles(List)>
    <WithStyles(ListItem)
      button={true}
      component={[Function]}
      key="Home"
      onClick={[Function]}
      to="/"
    >
      <WithStyles(ListItemIcon)>
        <mockConstructor
          className="listItemIcon"
        />
      </WithStyles(ListItemIcon)>
      <WithStyles(ListItemText)
        primary="Home"
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      button={true}
      component={[Function]}
      key="About me"
      onClick={[Function]}
      to="/about"
    >
      <WithStyles(ListItemIcon)>
        <mockConstructor
          className="listItemIcon"
        />
      </WithStyles(ListItemIcon)>
      <WithStyles(ListItemText)
        primary="About me"
      />
    </WithStyles(ListItem)>
  </WithStyles(List)>
  <WithStyles(Divider) />
  <WithStyles(ListItem)
    className="darkMode"
  >
    <WithStyles(Switch)
      checked={false}
      color="primary"
      onChange={[Function]}
    />
    <WithStyles(ListItemText)
      primary="Dark Mode"
    />
  </WithStyles(ListItem)>
  <WithStyles(Divider) />
  <div
    className="social"
  >
    <a
      aria-label="Follow @chrisdopuch on GitHub"
      className="github-button"
      href="https://github.com/chrisdopuch"
    >
      Follow @chrisdopuch
    </a>
  </div>
</div>
`;
